[package]
name = "aoc20"
version = "0.1.0"
authors = ["Olivier Pinon <oliv.pinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.9"
recap = "0.1.1"
serde = "1.0.117"
thiserror = "1.0"